# native_opencv

./: LICENSE  README.md  pubspec.yaml
android/: build.gradle
android/src/main/kotlin/com/example/native_opencv/: NativeOpencvPlugin.kt
example/: .flutter-plugins-dependencies 2  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: native_opencv.podspec
ios/Classes/: native_add.cpp
lib/: native_opencv.dart
lib/components/: form_util.dart
lib/utils/: adjustment_area.dart  city_picker.dart  physisal_type.dart  picker_area.dart  size_input.dart
libs/native_add/: CMakeLists.txt  native_add.cpp
